# VixenEngineVulkan

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  meson.build  meson_options.txt
cmake/: FindGLFW.cmake  Findassimp.cmake  VersionResource.rc  generate_product_version.cmake
editor/: CMakeLists.txt  main.cpp  meson.build  properties.rc
editor/models/crystal/: Crystal.blend
editor/models/fox/: Fox.fbx
editor/models/michiru/Meshes/: MichiruEditedNormalsSkel_v001_002.fbx  MichiruSkel_v001_002.fbx
editor/models/michiru/Textures/: MichiruEyeToonShadow_diff.tga
engine/: CMakeLists.txt  meson.build  properties.rc
engine/include/: Camera.h  Device.h  Entity.h  FragmentShader.h  Framebuffer.h  Input.h  Instance.h  Loader.h  Logger.h  LogicalDevice.h  Mesh.h  MeshStore.h  PhysicalDevice.h  Render.h  Scene.h  Shader.h  ShaderBinding.h  ShaderModule.h  SimpleMath.h  Texture.h  Util.h  VertexShader.h  VixenEngine.h  Window.h
engine/include/exceptions/: IOException.h  ImageException.h  VulkanException.h
engine/src/: Buffer.cpp  Buffer.h  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Entity.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageException.h  ImageSampler.cpp  ImageSampler.h  ImageView.cpp  ImageView.h  Input.cpp  Input.h  Instance.cpp  Instance.h  Loader.cpp  Logger.cpp  Logger.h  LogicalDevice.cpp  LogicalDevice.h  Mesh.cpp  Mesh.h  MeshStore.h  PhysicalDevice.cpp  PhysicalDevice.h  PushConstant.h  Render.cpp  (+22 more)
engine/src/exceptions/: IOException.h
engine/src/vk/: Buffer.cpp  Buffer.h  Camera.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Entity.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  ImageSampler.cpp  ImageSampler.h  ImageView.cpp  ImageView.h  Input.cpp  Input.h  Instance.cpp  Instance.h  Logger.cpp  Logger.h  LogicalDevice.cpp  LogicalDevice.h  Mesh.cpp  Mesh.h  MeshStore.h  PhysicalDevice.cpp  PhysicalDevice.h  PushConstant.h  Render.cpp  Render.h  Scene.h  Shader.cpp  Shader.h  ShaderDescriptor.cpp  (+9 more)
test/: CMakeLists.txt  ModelViewProjection.h  main.cpp  meson.build  properties.rc
test/models/: Crystal.FBX  Crystal.fbx  Fox.FBX  Fox.fbx  Fox_3DS.FBX  Fox_Blender.fbx  Fox_Triangles.fbx  Tree.FBX
test/models/crystal/: Crystal.fbx
test/models/fox/: Fox.blend
test/models/michiru/: UpdateLog.txt
test/models/michiru/Textures/.mayaSwatches/: MichiruEye_diff.tga_hcm.swatch
test/models/ruby_rose/: crescentRoseSkel_v001_002.fbx  crescentRoseSkel_v001_002.ma  workspace.mel
test/models/ruby_rose_pose/Mesh/: crescentRose_v001_002.ma
test/shaders/: test.frag  test.vert
