cmake_minimum_required(VERSION 3.13)
project(VixenEngine)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libstdc++ -static-libgcc")

set(SKIP_INSTALL_ALL ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

# ---- OPTIONS ----

option(VIXEN_BUILD_TEST "Build the test executable" ON)
option(vixen_BUILD_FBXImport "Build FBXImport" ON)
option(vixen_BUILD_GLFW "Build GLFW" ON)

if (CMAKE_BUILD_TYPE MATCHES "Debug")
    add_compile_definitions(VIXEN_DEBUG)
endif (CMAKE_BUILD_TYPE MATCHES "Debug")

set(VIXEN_LOGGER_MODE "VIXEN_TRACE" CACHE STRING "The desired logger mode")
set_property(CACHE VIXEN_LOGGER_MODE PROPERTY STRINGS "VIXEN_FATAL" "VIXEN_ERROR" "VIXEN_WARNING" "VIXEN_INFO" "VIXEN_TRACE" "VIXEN_NONE")

if (VIXEN_LOGGER_MODE STREQUAL "VIXEN_NONE")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=0)
elseif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_FATAL")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=1)
elseif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_ERROR")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=2)
elseif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_WARNING")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=3)
elseif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_INFO")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=4)
elseif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_TRACE")
    add_compile_definitions(VIXEN_DEBUG_LEVEL=5)
endif (VIXEN_LOGGER_MODE STREQUAL "VIXEN_NONE")

# ---- BUILD ENGINE ----

add_subdirectory(engine/)

# ---- BUILD TEST ----

if (VIXEN_BUILD_TEST)
    add_subdirectory(test/)
endif (VIXEN_BUILD_TEST)